force-app/main/default/objects/Floor__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Floors</relationshipLabel>
    <relationshipName>Floors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>