force-app/main/default/objects/Floor__c/fields/Cleaning_Frequency_Days__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Frequency_Days__c</fullName>
    <label>Cleaning Frequency (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>