force-app/main/default/objects/Floor__c/fields/Cleaning_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Overdue__c</fullName>
    <formula>Days_Since_Last_Cleaning__c &gt;  Cleaning_Frequency_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cleaning Overdue</label>
    <type>Checkbox</type>
</CustomField>