force-app/main/default/objects/Floor__c/fields/Days_Since_Last_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Cleaning__c</fullName>
    <formula>NOW() - Last_Cleaning_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Cleaning</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>