force-app/main/default/objects/Floor__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <label># of Employees</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>