force-app/main/default/objects/Floor__c/fields/Floor_Number__c.field-meta.xml
<CustomField>
    <fullName>Floor_Number__c</fullName>
    <label>Floor Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>