force-app/main/default/objects/Floor__c/fields/Last_Cleaning_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Cleaning_Time__c</fullName>
    <label>Last Cleaning Time</label>
    <summarizedField>Cleaning__c.Cleaning_Time__c</summarizedField>
    <summaryForeignKey>Cleaning__c.Floor__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>