force-app/main/default/objects/Floor__c/fields/Total_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_Employees__c</fullName>
    <label>Total Employees</label>
    <summaryForeignKey>Employee__c.Floor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>